# KML-CLBS

./: .gitignore  README.md  pyproject.toml
deprecated/: blog.py
deprecated/blog/: create.html  list.html
src/kml_clbs/: __init__.py  auth.py  blog.py
src/kml_clbs/config/: network_config.py  nginx.conf  path_config.py  port.py  software.py
src/kml_clbs/models/: db.py  schema.sql
src/kml_clbs/routes/: auth.py  home.py  molecular.py  monitor_route.py  ngs.py  pcr.py  pcr_route.py
src/kml_clbs/services/: pcr_kras.py  pcr_kras_service.py  pcr_service.py
src/kml_clbs/static/css/: my.css
src/kml_clbs/templates/: base.html  index.html
src/kml_clbs/templates/auth/: login.html  register.html
src/kml_clbs/templates/blog/: create.html  update.html
src/kml_clbs/templates/molecular/: bcl2fastq.html  nav.html
src/kml_clbs/templates/monitor/: index copy.bak  index.html
src/kml_clbs/templates/ngs/: bcl2fastq.html  nav.html
src/kml_clbs/templates/pcr/: index.html  kras.html
src/kml_clbs/utils/: access_log_util.py
tests/: conftest.py  test_auth.py  test_blog.py  test_db.py  test_factory.py  test_pcr_kras.py  test_pcr_kras_service.py
