[project]
name = "kml-clbs"
version = "0.1.0"
description = ""
authors = [
    {name = "Kristoff Meng",email = "kr1stoff7m@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "kml_clbs", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
