[project]
name = "kml-clbs"
version = "0.1.0"
description = ""
authors = [{ name = "Kristoff Meng", email = "kr1stoff7m@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click (>=8.2.1,<9.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "build (>=1.3.0,<2.0.0)",
    "waitress (>=3.0.2,<4.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "coverage (>=7.10.6,<8.0.0)",
]

[tool.poetry]
packages = [{ include = "kml_clbs", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.coverage.run]
branch = true
# source = ["kml_clbs"]
source = ["src"]
